--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,13 +4,13 @@
 
 @font-face {
     font-family: 'Myfont';
-    src: url('fonts/Inter-VariableFont_slnt\,wght.ttf') format(".ttf");
+    src: url('fonts/Inter-VariableFont_slnt\,wght.ttf') format("truetype");
     font-weight: 400,600,700;
     font-style: normal;
 }
 
 body {
-    font-family: 'Myfont', sans-serif;
+    font-family: 'Myfont';
     line-height: 1.3;
     width: 100%;
     height: 100vh;
@@ -25,7 +25,7 @@ body {
 main {
     background-color: hsl(0, 0%, 12%);
     width: 360px;
-    height: 600px;
+    height: 540px;
     border-radius: 10px;
 }
 
@@ -44,7 +44,85 @@ section {
 
 .avatar img {
     clip-path: circle(50%);
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
+}
+
+.introduction {
+    flex: 1 1 20%;
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.introduction h1 {
+    color: white;
+    font-size: 26px;
+    margin: 5px 0px;
+    font-weight: 700;
+    font-weight: normal;
+}
+
+.introduction h2 {
+    color: hsl(75, 94%, 57%);
+    font-size: 15px;
+    margin: 5px 0px;
+    font-weight: 600;
+}
+
+.introduction p {
+    color: white;
+    font-size: 14px;
+    margin: 15px 0px;
+    font-weight: 400;
+}
+
+.link-list {
+    flex: 1 1 50%;
+}
+
+.link-list ul {
+    list-style: none;
+    margin: 5px 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+
+}
+
+.link-list ul li {
+    width: 300px;
+    height: 40px;
+    background-color:hsl(0, 0%, 20%) ;
+    border: none;
+    border-radius: 10px;
+    align-content: center;
+    text-align: center;
+}
+
+
+.link-list ul li a {
+    text-decoration: none;
+    color: white;
+    display: block;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.link-list ul li a:active {
+    background-color:hsl(75, 94%, 57%);
+    color: black;
 }
