--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,7 +25,7 @@ body {
 main {
     background-color: hsl(0, 0%, 12%);
     width: 360px;
-    height: 540px;
+    height: 580px;
     border-radius: 10px;
 }
 
@@ -38,6 +38,7 @@ section {
 }
 
 .avatar {
+    margin-top: 25px;
     flex: 1 1 30%;
     padding: 5px;
 }
